name:          lens-properties
category:      Data, Lenses
version:       4.11.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward Kmett and Oliver Charles
maintainer:    Edward Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/lens/
bug-reports:   http://github.com/ekmett/lens/issues
copyright:     Copyright (C) 2012-2015 Edward A. Kmett, Copyright (C) 2014 Oliver Charles
synopsis:      QuickCheck properties for lens
description:   QuickCheck properties for lens.
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.4
             , GHC == 9.0.1

extra-source-files:
  .hlint.yaml
  CHANGELOG.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/lens.git

library
  build-depends:
    base         >= 4.9 && < 5,
    lens         >= 4   && < 6,
    QuickCheck   >= 2.4 && < 2.15,
    transformers >= 0.2 && < 0.6

  exposed-modules:
    Control.Lens.Properties

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
